@@ -6,20 +6,20 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 30/04/2022
-# Versão: 0.06
+# Data de atualização: 30/05/2022
+# Versão: 0.07
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
-# Testado e homologado para a versão do Wordpress v5.8.x
+# Testado e homologado para a versão do Wordpress v6.0.x
 #
 # Configuração do Módulo de TLS/SSL do Apache2
-#<IfModule mod_ssl.c>
+<IfModule mod_ssl.c>
 	#
 	# Configuração do Virtual Host do Wordpress para suportar o TLS/SSL na porta 443
-	#<VirtualHost _default_:443>
+	<VirtualHost _default_:443>
 #
 #Configuração do Virtual Host do Wordpress no Apache2 na porta padrão 80
-<VirtualHost *:80>
+#<VirtualHost *:80>
 	#
 	# Configuração do email do administrador do Wordpress
 	ServerAdmin admin@pti.intra
@@ -43,10 +43,10 @@
 	</Directory>
 	#
 	# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
-	#SSLEngine on
-	#SSLCertificateFile /etc/ssl/newcerts/wordpress.crt
-	#SSLCertificateKeyFile /etc/ssl/private/wordpress.key
-	#SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
+	SSLEngine on
+	SSLCertificateFile /etc/ssl/newcerts/apache2.crt
+	SSLCertificateKeyFile /etc/ssl/private/apache2.key
+	SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 	#
  	# Configuração dos arquivos de Log de Acesso e Erros do Wordpress
 	ErrorLog ${APACHE_LOG_DIR}/error-wordpress.log
