@@ -12,7 +12,7 @@
 	* Versão: 0.05
 	* Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 	* Testado e homologado para a versão do Apache2 v2.4.x
-	* Testado e homologado para a versão do Wordpress v5.8.x
+	* Testado e homologado para a versão do Wordpress v6.0.x
 */
  
 // ** Configurações do MySQL - Você pode pegar estas informações com o serviço de hospedagem ** //
